ops/cfn/templates/readyset-vpc-supplemental-template.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Supplemental VPC resources to support ReadySet components

Parameters:
  VPCID:
    Description: ID of the VPC to deploy resources within.
    Type: AWS::EC2::VPC::Id

  VPCCIDR:
    Description: CIDR block for the VPC.
    Type: String
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$

  AdditionalMonitoringCIDR1:
    Description: CIDR block for use with monitoring ingress
    Type: String
    Default: ""
    AllowedPattern: ^|(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$

  AdditionalAdapterCIDR:
    Description: Additional CIDR to allow access to the Adapters from.
    Type: String
    Default: ""
    AllowedPattern: ^|(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$

  VPCPrivateSubnetIds:
    Description: Comma-delimited list of private subnet IDs within the target VPC (e.g. subnet-1234,subnet-4567,subnet-8910).
    Type: CommaDelimitedList

  VPCEndpointsEnabled:
    Description: Toggles the creation of VPC endpoints. Set to true if the target VPC does not use NAT gateways.
    Type: String
    AllowedValues:
      - "true"
      - "false"
    Default: "true"

  # Bastion SG

  BastionSecurityGroupID:
    Description: ID of security group designated for Bastion hosts.
    Type: AWS::EC2::SecurityGroup::Id

Conditions:
  CreateAdditionalAdapterCIDRRule: !Not [!Equals [!Ref AdditionalAdapterCIDR, ""]]

  CreateAdditionalMonitoringCIDR1: !Not [!Equals [!Ref AdditionalMonitoringCIDR1, ""]]

  CreateVPCEndpoints: !Equals [!Ref VPCEndpointsEnabled, "true"]

Resources:
  ConsulServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH access from ReadySet bastion host.
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        # Consul Server: Server RPC address (TCP Only)
        # No other security groups need 8300.
        - IpProtocol: tcp
          FromPort: 8300
          ToPort: 8300
          CidrIp: !Ref VPCCIDR
        # Consul LAN Serf: 8301 UDP/TCP.
        # Omit port 8302 because WAN advertising is disabled
        - IpProtocol: tcp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        # HTTP API (TCP Only)
        - IpProtocol: tcp
          FromPort: 8500
          ToPort: 8500
          CidrIp: !Ref VPCCIDR
        - IpProtocol: udp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          CidrIp: !Ref VPCCIDR
      Tags:
        - Key: Name
          Value: !Join
            - '-'
            - - !Ref "AWS::StackName"
              - ConsulSecGroup

  ReadySetAdapterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections to the adapter and SSH from inside the VPC
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        - IpProtocol: tcp
          FromPort: 6034
          ToPort: 6034
          CidrIp: !Ref VPCCIDR
          Description: Adapter HTTP server port, required for health checks.
        # Consul LAN Serf: 8301 UDP/TCP
        - IpProtocol: tcp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: udp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: !Ref VPCCIDR
          Description: Allow inbound MySQL queries from inside VPC.
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: !Ref VPCCIDR
          Description: Allow inbound PostgreSQL queries from inside VPC.
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  ReadySetAdapterSecurityCIDRMySQLIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ReadySetAdapterSecurityGroup
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      CidrIp: !Ref AdditionalAdapterCIDR
      Description: Allow inbound MySQL queries for additional CIDR
    Condition: CreateAdditionalAdapterCIDRRule

  ReadySetAdapterSecurityCIDRPostgresIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ReadySetAdapterSecurityGroup
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      CidrIp: !Ref AdditionalAdapterCIDR
      Description: Allow inbound PostgreSQL queries for additional CIDR
    Condition: CreateAdditionalAdapterCIDRRule

  ReadySetMonitorGrafanaCIDRIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ReadySetAdapterSecurityGroup
      IpProtocol: tcp
      FromPort: 4000
      ToPort: 4000
      CidrIp: !Ref AdditionalMonitoringCIDR1
      Description: Allow ingress to grafana from a VPN CIDR
    Condition: CreateAdditionalMonitoringCIDR1

  ReadySetServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections to and between servers and SSH from inside the VPC
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref BastionSecurityGroupID
        # Consul LAN Serf: 8301 UDP/TCP
        - IpProtocol: tcp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: udp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 6033
          ToPort: 6033
          SourceSecurityGroupId: !GetAtt ReadySetAdapterSecurityGroup.GroupId
          # Postgres Adapter
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !GetAtt ReadySetAdapterSecurityGroup.GroupId
        - IpProtocol: tcp
          FromPort: 32768 # https://en.wikipedia.org/wiki/Ephemeral_port
          ToPort: 61000
          SourceSecurityGroupId: !GetAtt ReadySetAdapterSecurityGroup.GroupId
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  # Seperate ingress rule for self referential ingress rule to prevent circular dependency.

  ReadySetServerSecurityGroupIngressControllerRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ReadySetServerSecurityGroup
      IpProtocol: tcp
      FromPort: 6033
      ToPort: 6033
      SourceSecurityGroupId: !Ref ReadySetServerSecurityGroup

  ReadySetServerSecurityGroupIngressWorkerRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ReadySetServerSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 32768 # https://en.wikipedia.org/wiki/Ephemeral_port
      ToPort: 61000
      SourceSecurityGroupId: !GetAtt ReadySetServerSecurityGroup.GroupId

  # VPC security group applied to RDS instances

  ReadySetDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections from ReadySet to RDS
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        # MySQL
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ReadySetAdapterSecurityGroup
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ReadySetServerSecurityGroup
        # Postgres
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ReadySetAdapterSecurityGroup
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ReadySetServerSecurityGroup

  ReadySetMonitoringSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow connections to and from the aggregator within the VPC.
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 9000
          ToPort: 9000
          CidrIp: !Ref VPCCIDR
        - IpProtocol: tcp
          FromPort: 9090
          ToPort: 9091
          CidrIp: !Ref VPCCIDR
          Description: Allow connections to a prometheus scrape endpoint and server within the VPC.
        - IpProtocol: tcp
          FromPort: 4000
          ToPort: 4000
          CidrIp: !Ref VPCCIDR
          Description: Allow connections to the grafana server within the VPC.
        - IpProtocol: tcp
          FromPort: 6035
          ToPort: 6035
          CidrIp: !Ref VPCCIDR
          Description: Allow connections to the metrics aggregator within the VPC
        # Consul LAN Serf: 8301 UDP/TCP
        - IpProtocol: tcp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
        - IpProtocol: udp
          FromPort: 8301
          ToPort: 8301
          CidrIp: !Ref VPCCIDR
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0

  # VPC endpoints

  VPCEInterfaceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables access to VPCE APIs within the VPC.
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ReadySetServerSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ReadySetAdapterSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ReadySetMonitoringSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref ConsulServerSecurityGroup
    Condition: CreateVPCEndpoints

  # EC2 VPC endpoint

  EC2VPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - ec2:DescribeInstances
              - ec2:DescribeTags
              - ec2:CreateVolume
              - ec2:DescribeVolumes
              - ec2:CreateTags
            Resource:
              - '*'
          - Effect: Allow
            Principal: '*'
            Action:
              - ec2:AttachVolume
              - ec2:DetachVolume
            Resource:
              - !Sub "arn:aws:ec2:${AWS::Region}:*:volume/*"
            Condition:
              "Null":
                aws:ResourceTag/ReadySet:ServerVolume: "false"
          - Effect: Allow
            Principal: '*'
            Action:
              - ec2:AttachVolume
              - ec2:DetachVolume
              - ec2:TerminateInstances
            Resource:
              - !Sub "arn:aws:ec2:${AWS::Region}:*:instance/*"
            Condition:
              "Null":
                aws:ResourceTag/ReadySet:ServerInstance: "false"
          # For Bastion Hosts
          - Effect: Allow
            Principal: '*'
            Action:
              - ec2:AssociateAddress
              - ec2:DescribeAddresses
            Resource:
              - '*'
          # For Consul Server
          - Effect: Allow
            Principal: '*'
            Action:
              - ec2:DescribeImages
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # Autoscaling VPC endpoint

  AutoscalingVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - autoscaling:CompleteLifecycleAction
              - autoscaling:DescribeAutoScalingGroups
              - autoscaling:SetInstanceHealth
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.autoscaling'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # SQS VPC endpoint

  SQSVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - sqs:ReceiveMessage
              - sqs:DeleteMessage
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.sqs'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # SSM VPC endpoint

  SSMVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - ssm:GetParameter
              - ssm:GetParameters
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # KMS VPC endpoint

  KMSVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - kms:Decrypt*
              - kms:Generate*
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.kms'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # CloudFormation VPC endpoint

  CloudFormationVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.cloudformation'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  # CloudWatch VPC endpoint

  CloudWatchLogsVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - logs:CreateLogStream
              - logs:DescribeLogGroups
              - logs:DescribeLogStreams
              - logs:CreateLogGroup
              - logs:PutLogEvents
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

  CloudWatchMonitoringVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - cloudwatch:PutMetricData
            Resource:
              - '*'
      SubnetIds: !Ref VPCPrivateSubnetIds
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.monitoring'
      SecurityGroupIds:
        - !Ref VPCEInterfaceSecurityGroup
      VpcEndpointType: Interface
      PrivateDnsEnabled: "true"
      VpcId: !Ref VPCID
    Condition: CreateVPCEndpoints

Outputs:
  ReadySetServerSecurityGroupID:
    Value: !Ref ReadySetServerSecurityGroup

  ReadySetAdapterSecurityGroupID:
    Value: !Ref ReadySetAdapterSecurityGroup

  ReadySetMonitoringSecurityGroupID:
    Value: !Ref ReadySetMonitoringSecurityGroup

  ConsulServerSecurityGroupID:
    Value: !Ref ConsulServerSecurityGroup

  ReadySetDBSecurityGroupID:
    Description: Attach this Security Group to your RDS instance.
    Value: !Ref ReadySetDBSecurityGroup
